# SlicerOpenNav

./: .git-blame-ignore-revs  .ruff.toml  CMakeLists.txt  LICENSE  OpenNav.json  README.md
FiducialSelection/: CMakeLists.txt  FiducialSelection.py
Home/: CMakeLists.txt  Home.py
Home/Resources/: Home.qss  PanelDark.qss  PanelLight.qss
Home/Resources/UI/: CenteredWidget.ui  Home.ui  Settings.ui
LandmarkManager/: CMakeLists.txt  LandmarkManager.py
LandmarkManager/Resources/UI/: LandmarkManager.ui
NNICPRegistration/: CMakeLists.txt  NNICPRegistration.py
NNSegmentation/: CMakeLists.txt  NNSegmentation.py
NNUtils/: CMakeLists.txt
NNUtils/NNUtils/: __init__.py  parameter_node.py
Navigation/: CMakeLists.txt  Navigation.py
Navigation/Resources/UI/: LayoutsDialog.ui  Navigation.ui  PointerDialog.ui
OpenNavUtils/: CMakeLists.txt
OpenNavUtils/OpenNavUtils/: __init__.py  autosave.py  layout.py  parameter_node.py  utils.py  widgets.py  workflow.py
OptiTrack/: CMakeLists.txt  OptiTrack.py
OptiTrack/Resources/: Head.xml  MotiveProfile-2021-06-24.xml  MotiveProfile-2021-10-22.xml  NousNav-BWH-Hardware.xml  OpenNav-BWH-Hardware_2024-05-08.xml  PLUSHead.xml.in  PlusDeviceSet_Server_OptiTrack_Profile.xml  Probe.xml  Reference.xml  Reference.xml.in  ReplayOptiTrack.xml  ReplayOptiTrack.xml.in
Patients/: CMakeLists.txt  Patients.py
Patients/Resources/UI/: CaseManagement.ui  CaseNameDialog.ui  PatientListDialog.ui  Patients.ui
Planning/: CMakeLists.txt  Planning.py
Planning/PlanningUtils/: definitions.py
Planning/Resources/UI/: Planning.ui
Registration/: CMakeLists.txt  Registration.py
Registration/RegistrationUtils/: Landmarks.py  Tools.py  Trace.py  __init__.py
Registration/Resources/Data/: NeedleModel.vtk
Registration/Resources/UI/: AlignmentSideWidget.ui  HardwareDialog.ui  LandmarkSideWidget.ui  Registration.ui
Registration/Resources/Videos/: Pivot.webm  Spin.webm  pivot.html  spin.html
SlicerCustomAppUtilities/: CMakeLists.txt
SlicerCustomAppUtilities/SlicerCustomAppUtilities/: __init__.py
Tracking/: CMakeLists.txt  CameraNavigation.py  Tools.py  Tracking.py
Tracking/Resources/OptiTrack/: Ellipse.mha  PlusDeviceSet_Server_OptiTrack_Profile.xml.in
TrackingInterface/: CMakeLists.txt  TrackingInterface.py
TrackingInterface/TrackingDevices/: Interface.py  NDIDevices.py  PLUSOptiTrack.py
